--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "cron": "^1.8.2",
     "discord.js": "^12.4.1",
+    "discord.js-commando": "github:discordjs/Commando",
     "dotenv": "^8.2.0",
     "fast-levenshtein": "^3.0.0",
     "fast-xml-parser": "^3.17.4",
