--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "fast-xml-parser": "^3.17.4",
     "moment": "^2.29.1",
     "node-fetch": "^2.6.1",
-    "nodemon": "^2.0.6"
+    "nodemon": "^2.0.6",
+    "on-ipvc": "git+https://github.com/sousa-andre/on-ipvc-scrapper.git"
   },
   "devDependencies": {
     "eslint": "^7.12.1",
