--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,15 +1,8 @@
 {
-    "plugins": [
-        "prettier"
-    ],
-    "extends": [
-        "eslint:recommended"
-    ],
-    "env": {
-        "node": true
-    },
+    "plugins": ["prettier"],
+    "extends": ["plugin:prettier/recommended"],
     "parserOptions": {
-        "ecmaVersion": 2017
+        "ecmaVersion": 2020
     },
     "rules": {
         "prettier/prettier": "warn"
