--- a/package.json
+++ b/package.json
@@ -1,29 +1,32 @@
 {
-  "name": "sas-ipvc-bot",
-  "version": "1.0.0",
-  "description": "",
-  "scripts": {
-    "dev": "nodemon -r dotenv/config ./src/index.js",
-    "start": "node ./src/index.js"
-  },
-  "author": "André Sousa <andrematodesousa@gmail.com>",
-  "license": "MIT",
-  "dependencies": {
-    "cron": "^1.8.2",
-    "discord.js": "^12.4.1",
-    "discord.js-commando": "github:discordjs/Commando",
-    "dotenv": "^8.2.0",
-    "fast-levenshtein": "^3.0.0",
-    "fast-xml-parser": "^3.17.4",
-    "moment": "^2.29.1",
-    "node-fetch": "^2.6.1",
-    "nodemon": "^2.0.6",
-    "on-ipvc": "git+https://github.com/sousa-andre/on-ipvc-scrapper.git"
-  },
-  "devDependencies": {
-    "eslint": "^7.12.1",
-    "eslint-config-prettier": "^6.15.0",
-    "eslint-plugin-prettier": "^3.1.4",
-    "prettier": "^2.1.2"
-  }
+    "name": "ei-bot-ipvc",
+    "private": true,
+    "version": "2.0.0-alpha",
+    "description": "",
+    "scripts": {
+        "dev": "concurrently \"tsc --watch -p .\" \"nodemon build/src/bot.js\"",
+        "test": "jest",
+        "start": "tsc -p . && node build/src/bot.js"
+    },
+    "author": "André Sousa <andrematodesousa@gmail.com>",
+    "license": "MIT",
+    "dependencies": {
+        "cron": "^1.8.2",
+        "discord.js": "^12.4.1",
+        "fast-xml-parser": "^3.17.4",
+        "moment": "^2.29.1",
+        "node-fetch": "^2.6.1",
+        "nodemon": "^2.0.6"
+    },
+    "devDependencies": {
+        "@types/node-fetch": "^2.5.7",
+        "concurrently": "^5.3.0",
+        "eslint": "^7.14.0",
+        "eslint-config-prettier": "^6.15.0",
+        "eslint-plugin-prettier": "^3.1.4",
+        "jest": "^26.6.3",
+        "prettier": "^2.1.2",
+        "ts-jest": "^26.4.4",
+        "typescript": "^4.1.2"
+    }
 }
