--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
         "nodemon": "^2.0.6"
     },
     "devDependencies": {
+        "@types/jest": "^26.0.19",
+        "@types/node": "^14.14.19",
         "@types/node-fetch": "^2.5.7",
         "concurrently": "^5.3.0",
         "eslint": "^7.14.0",
