Updates on handlers and botConfig.json

--- a/src/botConfig.json
+++ b/src/botConfig.json
@@ -8,61 +8,102 @@
             "channelId": "772155762239471657"
         }
     },
-    "reacts": [
-        {
-            "messageId": "779507900636463155",
-            "emoji": "📖",
-            "roleId": "795334538397089792"
-        },
-        {
-            "messageId": "779508151874879540",
-            "emoji": "📂",
-            "roleId": "795334575164358676"
-        },
-        {
-            "messageId": "779508285111140353",
-            "emoji": "🥳",
-            "roleId": "795334598124109834"
-        },
-        {
-            "messageId": "779508430473396235",
-            "emoji": "🎵",
-            "roleId": "795334686443307049"
-        },
-        {
-            "messageId": "779508742692536340",
-            "emoji": "🍴",
-            "roleId": "795334720731742308"
-        },
-        {
-            "messageId": "795074401259094046",
-            "emoji": "🔴",
-            "roleId": "795072574467604510"
-        },
-        {
-            "messageId": "795074401259094046",
-            "emoji": "🔵",
-            "roleId": "795072357744115743"
-        },
-        {
-            "messageId": "795074401259094046",
-            "emoji": "🟠",
-            "roleId": "795072548629905408"
-        },
-        {
-            "messageId": "795074401259094046",
-            "emoji": "🟢",
-            "roleId": "795072447304302624"
-        },
-        {
-            "messageId": "795074401259094046",
-            "emoji": "🟡",
-            "roleId": "795072523371806761"
-        },
-        {
-            "messageId": "795074401259094046",
-            "emoji": "🟣",
-            "roleId": "795072421627428864"
+    "reacts": {
+        "779491420079259659": {
+            "795332984056184883": {
+                "emoji": "📖",
+                "roleId": "795334538397089792"
+            },
+            "795333038070038579": {
+                "emoji": "📂",
+                "roleId": "795334575164358676"
+            },
+            "795333186862448650": {
+                "emoji": "🥳",
+                "roleId": "795334598124109834"
+            },
+            "795333279615680592": {
+                "emoji": "🎵",
+                "roleId": "795334686443307049"
+            },
+            "795333322938646529": {
+                "emoji": "🍴",
+                "roleId": "795334720731742308"
+            },
+            "795333451708235776": [
+                {
+                    "emoji": "🔴",
+                    "roleId": "795072574467604510",
+                    "group": "colors"
+                },
+                {
+                    "emoji": "🔵",
+                    "roleId": "795072357744115743",
+                    "group": "colors"
+
+                },
+                {
+                    "emoji": "🟠",
+                    "roleId": "795072548629905408",
+                    "group": "colors"
+                },
+                {
+                    "emoji": "🟢",
+                    "roleId": "795072447304302624",
+                    "group": "colors"
+                },
+                {
+                    "emoji": "🟡",
+                    "roleId": "795072523371806761",
+                    "group": "colors"
+                },
+                {
+                    "emoji": "🟣",
+                    "roleId": "795072421627428864",
+                    "group": "colors"
+                }
+            ],
+            "795399980495798312": [
+                {
+                    "emoji": "1️⃣",
+                    "roleId": "779478593641250836",
+                    "group": "year"
+                },
+                {
+                    "emoji": "2️⃣",
+                    "roleId": "779478680702287922",
+                    "group": "year"
+                },
+                {
+                    "emoji": "3️⃣",
+                    "roleId": "779478818552414268",
+                    "group": "year"
+                },
+                {
+                    "emojiId": "A_:779372095721177109",
+                    "emoji": "A_",
+                    "roleId": "766286599641890896",
+                    "group": "class"
+                },
+                {
+                    "emojiId": "B_:779372117049212980",
+                    "emoji": "B_",
+                    "roleId": "766286620084273152",
+                    "group": "class"
+                },
+                {
+                    "emojiId": "C_:779372136736620564",
+                    "emoji": "C_",
+                    "roleId": "766286336113639454",
+                    "group": "class"
+                },
+                {
+                    "emojiId": "D_:779372169020833802",
+                    "emoji": "D_",
+                    "roleId": "766286641295130654",
+                    "group": "class"
+                }
+            ]
         }
-    ]
+    }
 }
