Command specific settings are now accessible them. Re-organized commands locations

--- a/src/botConfig.json
+++ b/src/botConfig.json
@@ -105,5 +105,27 @@
                 }
             ]
         }
+    },
+    "commands": {
+        "schedule": {
+            "class": [
+                {
+                    "roleId": "766286599641890896",
+                    "content": "A"
+                },
+                {
+                    "roleId": "766286620084273152",
+                    "content": "B"
+                },
+                {
+                    "roleId": "766286336113639454",
+                    "content": "C"
+                },
+                {
+                    "roleId": "766286641295130654",
+                    "content": "D"
+                }
+            ]
+        }
     }
 }
