Added verify command

--- a/src/botConfig.json
+++ b/src/botConfig.json
@@ -95,7 +95,7 @@
                     "emojiId": "C_:779372136736620564",
                     "emoji": "C_",
                     "roleId": "766286336113639454",
-                    "group": "class"
+                        "group": "class"
                 },
                 {
                     "emojiId": "D_:779372169020833802",
@@ -126,6 +126,10 @@
                     "content": "D"
                 }
             ]
+        },
+        "verify": {
+            "guildId": "766278332500803604",
+            "roleId": "844312359488454727"
         }
     }
 }
