--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "license": "MIT",
     "dependencies": {
         "@discordjs/opus": "^0.4.0",
+        "cheerio": "*",
         "cron": "^1.8.2",
         "discord.js": "^12.4.1",
         "fast-xml-parser": "^3.17.4",
