--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "license": "MIT",
     "dependencies": {
         "@discordjs/opus": "^0.4.0",
-        "cheerio": "*",
+        "cheerio": "^1.0.0-rc.9",
         "cron": "^1.8.2",
         "discord.js": "^12.4.1",
         "fast-xml-parser": "^3.17.4",
