Schedule command now works with school years

--- a/src/botConfig.json
+++ b/src/botConfig.json
@@ -125,6 +125,20 @@
                     "roleId": "766286641295130654",
                     "content": "D"
                 }
+            ],
+            "year": [
+                {
+                    "roleId": "779478593641250836",
+                    "content": "1"
+                },
+                {
+                    "roleId": "779478680702287922",
+                    "content": "2"
+                },
+                {
+                    "roleId": "779478818552414268",
+                    "content": "3"
+                }
             ]
         },
         "verify": {
