--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "discord.js": "^12.4.1",
         "fast-xml-parser": "^3.17.4",
         "ffmpeg-static": "^4.2.7",
+        "form-data": "^3.0.1",
         "moment": "^2.29.1",
         "node-fetch": "^2.6.1",
         "nodemon": "^2.0.6",
