--- a/src/botConfig.json
+++ b/src/botConfig.json
@@ -4,7 +4,7 @@
     },
     "timmers": {
         "meals": {
-            "cronTime": "0 20 * * 0-4",
+            "cronTime": "0 20 * 1,2,3,4,5,6,9,10,11,12 0-4",
             "channelId": "772155762239471657"
         }
     },
