Added movies updates channel

--- a/src/botConfig.json
+++ b/src/botConfig.json
@@ -4,8 +4,13 @@
     },
     "timmers": {
         "meals": {
-            "cronTime": "0 20 * 1,2,3,4,5,6,9,10,11,12 0-4",
+            "cronTime": "0 20 * 0,1,2,3,4,5,6,9,10,11 0-4",
             "channelId": "772155762239471657"
+        },
+        "cineplace": {
+            "cronTime": "0 4 * * *",
+            "channelId": "865240499861454888",
+            "messageId": "859892341430550558"
         }
     },
     "reacts": {
