--- a/src/botConfig.json
+++ b/src/botConfig.json
@@ -28,8 +28,8 @@
                 "roleId": "795334598124109834"
             },
             "795333279615680592": {
-                "emoji": "🎵",
-                "roleId": "795334686443307049"
+                "emoji": "🍿",
+                "roleId": "865272528654434304"
             },
             "795333322938646529": {
                 "emoji": "🍴",
