--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "fast-xml-parser": "^3.17.4",
         "ffmpeg-static": "^4.2.7",
         "form-data": "^3.0.1",
+        "minecraft-server-util": "^3.5.2",
         "moment": "^2.29.1",
         "node-fetch": "^2.6.1",
         "nodemon": "^2.0.6",
