Added vitenoipvc timer

--- a/src/botConfig.json
+++ b/src/botConfig.json
@@ -14,6 +14,11 @@
         "minecraft": {
             "cronTime": "* * * * *",
             "channelId": "855197188678221844"
+        },
+        "vitenoipvc": {
+            "cronTime": "* * * * *",
+            "channelId": "899951187632193546",
+            "instagramAccount": "vitenoipvc2021_2022"
         }
     },
     "reacts": {
@@ -21,10 +26,6 @@
             "795332984056184883": {
                 "emoji": "📖",
                 "roleId": "795334538397089792"
-            },
-            "795333038070038579": {
-                "emoji": "📂",
-                "roleId": "795334575164358676"
             },
             "795333186862448650": {
                 "emoji": "🥳",
