--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "cheerio": "^1.0.0-rc.9",
         "cron": "^1.8.2",
         "discord.js": "^12.4.1",
+        "dotenv": "^10.0.0",
         "fast-xml-parser": "^3.17.4",
         "ffmpeg-static": "^4.2.7",
         "form-data": "^3.0.1",
