--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "description": "",
     "scripts": {
         "lint": "prettier --write src/**/*.ts",
-        "dev": "concurrently \"tsc --watch -p .\" \"nodemon build/src/bot.js\"",
+        "dev": "ts-node-dev src/bot.ts",
         "test": "jest",
         "build": "tsc -p . ",
         "start": "node build/src/bot.js"
@@ -13,7 +13,7 @@
     "author": "André Sousa <andrematodesousa@gmail.com>",
     "license": "MIT",
     "dependencies": {
-        "@discordjs/opus": "^0.4.0",
+        "@discordjs/opus": "^0.8.0",
         "cheerio": "^1.0.0-rc.9",
         "cron": "^1.8.2",
         "discord.js": "^12.4.1",
@@ -25,20 +25,19 @@
         "minecraft-server-util": "^3.5.2",
         "moment": "^2.29.1",
         "node-fetch": "^2.6.1",
-        "nodemon": "^2.0.6",
         "ytdl-core": "^4.4.5"
     },
     "devDependencies": {
         "@types/jest": "^26.0.19",
         "@types/node": "^14.14.19",
         "@types/node-fetch": "^2.5.7",
-        "concurrently": "^5.3.0",
         "eslint": "^7.14.0",
         "eslint-config-prettier": "^6.15.0",
         "eslint-plugin-prettier": "^3.1.4",
         "jest": "^26.6.3",
         "prettier": "^2.1.2",
         "ts-jest": "^26.4.4",
-        "typescript": "^4.1.2"
+        "ts-node-dev": "^2.0.0",
+        "typescript": "^4.7.4"
     }
 }
