--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
         "minecraft-server-util": "^3.5.2",
         "moment": "^2.29.1",
         "node-fetch": "^2.6.1",
+        "normalize-strings": "^1.1.1",
         "ytdl-core": "^4.4.5"
     },
     "devDependencies": {
