--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
         "node": "16.x"
     },
     "dependencies": {
-        "dotenv": "^16.0.3"
+        "dotenv": "^16.0.3",
+        "turbo": "^1.5.6"
     },
     "devDependencies": {
         "@types/node": "^14.14.19",
@@ -30,7 +31,6 @@
         "jest": "^26.6.3",
         "prettier": "^2.1.2",
         "ts-jest": "^26.4.4",
-        "turbo": "^1.5.6",
         "typescript": "^4.7.4"
     }
 }
