--- a/packages/on/package.json
+++ b/packages/on/package.json
@@ -1,7 +1,10 @@
 {
   "name": "@geei/on",
-  "main": "src/index.ts",
-  "types": "src/index.ts",
+  "main": "build/index.js",
+  "types": "build/index.d.ts",
+  "scripts": {
+    "build": "tsc"
+  },
   "dependencies": {
     "cheerio": "^1.0.0-rc.12",
     "moment": "^2.29.4",
