--- a/packages/on/tsconfig.json
+++ b/packages/on/tsconfig.json
@@ -4,8 +4,7 @@
     "esModuleInterop": true,
     "outDir": "./build",
     "isolatedModules": true,
-    "noEmit": true,
-    "strict": true,
+    "declaration": true
   },
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules", "build"]
 }
