--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "author": "André Sousa <andrematodesousa@gmail.com>",
     "license": "MIT",
     "engines": {
-        "node": "16.x"
+        "node": "16.x",
+        "npm": "8.15.x"
     },
     "dependencies": {
         "dotenv": "^16.0.3",
