--- a/turbo.json
+++ b/turbo.json
@@ -13,6 +13,9 @@
     },
     "dev": {
       "cache": false
+    },
+    "test": {
+      "dependsOn": ["build"]
     }
   },
   "globalDependencies": [
