--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,8 +1,11 @@
 {
-    "plugins": ["prettier"],
-    "extends": ["plugin:prettier/recommended"],
+    "plugins": ["prettier", "@typescript-eslint"],
+    "extends": ["plugin:prettier/recommended", "eslint:recommended", "plugin:@typescript-eslint/recommended"],
+    "parser": "@typescript-eslint/parser",
+    "root": true,
     "parserOptions": {
-        "ecmaVersion": 2020
+        "ecmaVersion": 2020,
+        "sourceType": "module"
     },
     "rules": {
         "prettier/prettier": "warn"
