--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
         "test": "turbo run test",
         "start": "turbo run start",
         "dev": "turbo run dev",
-        "build": "turbo run build"
+        "build": "turbo run build",
+        "lint:check": "turbo run lint:check"
     },
     "workspaces": [
         "apps/*",
@@ -29,12 +30,14 @@
     },
     "devDependencies": {
         "@types/node": "^14.14.19",
-        "eslint": "^7.14.0",
+        "@typescript-eslint/eslint-plugin": "^5.41.0",
+        "@typescript-eslint/parser": "^5.41.0",
+        "eslint": "^7.32.0",
         "eslint-config-prettier": "^6.15.0",
         "eslint-plugin-prettier": "^3.1.4",
         "jest": "^26.6.3",
         "prettier": "^2.1.2",
         "ts-jest": "^26.4.4",
-        "typescript": "^4.7.4"
+        "typescript": "^4.8.4"
     }
 }
