Enabled tests to pass without tests

--- a/apps/bot/package.json
+++ b/apps/bot/package.json
@@ -6,7 +6,7 @@
     "scripts": {
         "lint": "prettier --write ./src/**/*.ts",
         "dev": "ts-node-dev ./src/main.ts",
-        "test": "jest",
+        "test": "jest --passWithNoTests",
         "lint:check": "prettier --check ./src/**/*.ts && eslint  ./src/**/*.ts",
         "build": "tsc -p .",
         "start": "npm run build && node ./build/main.js"
