Added typescript to "on" package dependency

--- a/packages/on/package.json
+++ b/packages/on/package.json
@@ -9,5 +9,8 @@
     "cheerio": "^1.0.0-rc.12",
     "moment": "^2.29.4",
     "node-fetch": "^2.6.1"
+  },
+  "devDependencies": {
+    "typescript": "^4.8.4"
   }
 }
