--- a/apps/bot/package.json
+++ b/apps/bot/package.json
@@ -8,8 +8,8 @@
         "dev": "ts-node-dev ./src/main.ts",
         "test": "jest --passWithNoTests",
         "lint:check": "prettier --check ./src/**/*.ts && eslint  ./src/**/*.ts",
-        "build": "tsc -p .",
-        "start": "npm run build && node ./build/main.js"
+        "build": "tsc",
+        "start": "node ./build/main.js"
     },
     "author": "André Sousa <andrematodesousa@gmail.com>",
     "license": "MIT",
