--- a/package.json
+++ b/package.json
@@ -37,7 +37,6 @@
         "eslint-plugin-prettier": "^3.1.4",
         "jest": "^26.6.3",
         "prettier": "^2.1.2",
-        "ts-jest": "^26.4.4",
-        "typescript": "^4.8.4"
+        "ts-jest": "^26.4.4"
     }
 }
