--- a/package.json
+++ b/package.json
@@ -17,6 +17,11 @@
         "packages/*"
     ],
     "author": "André Sousa <andrematodesousa@gmail.com>",
+    "contributors": [
+        "Rodrigo Sá (https://github.com/rodrigosa7)",
+        "Pedro Cunha (https://github.com/CunhaPedro25)",
+        "João Alves (https://github.com/joaoalves03"
+    ],
     "license": "MIT",
     "engines": {
         "node": ">=16",
